--- a/medical_systems_client/package.json
+++ b/medical_systems_client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.27",
     "@types/react": "^16.9.20",
     "@types/react-dom": "^16.9.5",
+    "@types/react-transition-group": "^4.2.3",
     "antd": "^3.26.11",
     "axios": "^0.19.2",
     "node-sass": "^4.13.1",
@@ -18,6 +19,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "typescript": "^3.7.5"
   },
