--- a/medical_systems_client/package.json
+++ b/medical_systems_client/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^12.12.27",
     "@types/react": "^16.9.20",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
     "@types/react-transition-group": "^4.2.3",
     "antd": "^3.26.11",
     "axios": "^0.19.2",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
