--- a/medical_systems_client/package.json
+++ b/medical_systems_client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/js-cookie": "^2.2.4",
     "@types/node": "^12.12.27",
     "@types/react": "^16.9.20",
     "@types/react-dom": "^16.9.5",
@@ -14,6 +15,7 @@
     "@types/react-transition-group": "^4.2.3",
     "antd": "^3.26.11",
     "axios": "^0.19.2",
+    "js-cookie": "^2.2.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
