--- a/medical_systems_client/package.json
+++ b/medical_systems_client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/js-cookie": "^2.2.4",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.12.27",
     "@types/react": "^16.9.20",
     "@types/react-dom": "^16.9.5",
@@ -16,6 +17,7 @@
     "antd": "^3.26.11",
     "axios": "^0.19.2",
     "js-cookie": "^2.2.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
