--- a/medical_systems_client/package.json
+++ b/medical_systems_client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/antd": "^1.0.0",
     "@types/jest": "^24.9.1",
     "@types/js-cookie": "^2.2.4",
     "@types/moment": "^2.13.0",
@@ -14,7 +15,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-transition-group": "^4.2.3",
-    "antd": "^3.26.11",
+    "antd": "^3.26.12",
     "axios": "^0.19.2",
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
