--- a/medical_systems_client/package.json
+++ b/medical_systems_client/package.json
@@ -15,7 +15,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-transition-group": "^4.2.3",
-    "antd": "^3.26.12",
+    "antd": "^4.0.0",
     "axios": "^0.19.2",
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@ant-design/compatible": "0.0.1-rc.1",
     "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
